[project]
name = "drawthings-client"
version = "0.0.1"
description = "Client libraries and the drawthings command for sending requests to Draw Things app"
readme = "README.md"
authors = [
    { name = "maku77", email = "makkuma77@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "pillow>=10.0.0",
]

[project.scripts]
drawthings = "drawthings_client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250611",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
